# UglyLaunchCore

./: .gitignore  README.md  config.ini  installer.py  main.py  multiinstall.py  pyproject.toml
src/launchcore/: downloader.py  installer.py
tests/: test_main.py
